# faro

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
faro/: __init__.py  database.py  table.py
scripts/: make_setup.py
tests/: test_database.py  test_table.py
