[tool.poetry]
name = "faro"
version = "0.0.2"
description = "An SQL-focused data analysis library for Python"
authors = ["Yannis Katsaros <yanniskatsaros@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.5.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
pytest = "^5.4.2"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
